--- a/style.css
+++ b/style.css
@@ -1,258 +1,218 @@
+/* Base Styles */
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    border: none;
-    outline: none;
-    font-family: "Poppins", sans-serif;
-  }
-  body {
-    background-color: #f5f8ff;
-  }
-  .wrapper {
-    width: 95%;
-    margin: 0 auto;
-  }
-  #search-container {
-    margin: 1em 0;
-  }
-  #search-container input {
-    background-color: transparent;
-    width: 40%;
-    border-bottom: 2px solid #110f29;
-    padding: 1em 0.3em;
-  }
-  #search-container input:focus {
-    border-bottom-color: #6759ff;
-  }
-  #search-container button {
-    padding: 1em 2em;
-    margin-left: 1em;
-    background-color: #6759ff;
-    color: #ffffff;
-    border-radius: 5px;
-    margin-top: 0.5em;
-  }
-  .button-value {
-    border: 2px solid #6759ff;
-    padding: 1em 2.2em;
-    border-radius: 3em;
-    background-color: transparent;
-    color: #6759ff;
-    cursor: pointer;
-  }
-  .active {
-    background-color: #6759ff;
-    color: #ffffff;
-  }
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  background-color: #f5f8ff;
+  font-family: 'Montserrat', sans-serif;
+  line-height: 1.6;
+  margin: 0;
+  min-height: 100vh;
+}
+
+/* Wrapper */
+.wrapper {
+  width: 95%;
+  margin: 0 auto;
+}
+
+/* Search Container */
+#search-container {
+  margin: 1em 0;
+  display: flex;
+  align-items: center;
+}
+
+#search-container input {
+  width: 40%;
+  border-bottom: 2px solid #110f29;
+  padding: 1em 0.3em;
+  background-color: transparent;
+}
+
+#search-container input:focus {
+  border-bottom-color: #6759ff;
+}
+
+#search-container button {
+  padding: 1em 2em;
+  margin-left: 1em;
+  background-color: #6759ff;
+  color: #ffffff;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+/* Button Styling */
+.button-value {
+  border: 2px solid #6759ff;
+  padding: 1em 2.2em;
+  border-radius: 3em;
+  background-color: transparent;
+  color: #6759ff;
+  cursor: pointer;
+}
+
+.active {
+  background-color: #6759ff;
+  color: #ffffff;
+}
+
+/* Books Grid */
+#Books {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.5em;
+  padding: 2em 0;
+}
+
+/* Card Styling */
+.card {
+  background-color: #ffffff;
+  max-width: 18em;
+  margin-top: 1em;
+  padding: 1em;
+  border-radius: 5px;
+  box-shadow: 1em 2em 2.5em rgba(1, 2, 68, 0.08);
+}
+
+/* Image Container */
+.image-container {
+  text-align: center;
+}
+
+img {
+  max-width: 100%;
+  object-fit: contain;
+  height: 15em;
+}
+
+/* Container Styling */
+.container {
+  padding-top: 1em;
+  color: #110f29;
+}
+
+.container h5 {
+  font-weight: 500;
+}
+
+/* Header */
+.header {
+  height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5em 1em;
+  background-color: #f4f4f4;
+  border: 1px solid #a2a2a2;
+  box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+}
+
+.header .title {
+  font-size: 1.5em;
+  color: #110f29;
+  text-decoration: none;
+}
+
+.header .nav {
+  display: flex;
+}
+
+.header .nav li {
+  list-style: none;
+  margin-left: 20px;
+}
+
+.header .nav a {
+  text-decoration: none;
+  color: #110f29;
+}
+
+/* Footer */
+.footer {
+  background: #000;
+  padding: 30px;
+  color: gray;
+  text-align: center;
+}
+
+.footer a {
+  color: gray;
+  transition: color 0.3s;
+}
+
+.footer a:hover {
+  color: #fff;
+}
+
+/* Responsive Styles */
+
+/* Tablet Screens (max-width: 720px) */
+@media screen and (max-width: 720px) {
+  /* Adjust the Books grid */
   #Books {
-    display: grid;
-    margin-left: 100px;
-    grid-template-columns: auto auto auto;
-    grid-column-gap: 1.5em;
-    padding: 2em 0;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1em;
   }
-  .card {
-    background-color: #ffffff;
-    max-width: 18em;
-    margin-top: 1em;
+
+  /* Adjust header and footer padding */
+  .header, .footer {
     padding: 1em;
-    border-radius: 5px;
-    box-shadow: 1em 2em 2.5em rgba(1, 2, 68, 0.08);
   }
-  .image-container {
+
+  .footer {
+    text-align: left;
+  }
+}
+
+/* Mobile Screens (max-width: 480px) */
+@media screen and (max-width: 480px) {
+  /* Adjust Search Input */
+  #search-container input {
+    width: 80%;
+    padding: 0.8em;
+  }
+
+  #search-container button {
+    padding: 0.8em 1.5em;
+    font-size: 0.9em;
+  }
+
+  /* Adjust the Books grid to a single column */
+  #Books {
+    grid-template-columns: 1fr;
+    gap: 1em;
+  }
+
+  .card {
+    max-width: 100%;
+  }
+
+  /* Header and Footer adjustments */
+  .header {
+    flex-direction: column;
     text-align: center;
   }
-  img {
-    max-width: 100%;
-    object-fit: contain;
-    height: 15em;
+
+  .header .nav {
+    flex-direction: column;
+    margin-top: 0.5em;
   }
-  .container {
-    padding-top: 1em;
-    color: #110f29;
+
+  .footer .row ul li {
+    display: block;
+    margin: 10px 0;
+    text-align: center;
   }
-  .container h5 {
-    font-weight: 500;
+
+  .button-value {
+    padding: 0.7em 1.5em;
+    font-size: 0.9em;
   }
-  .hide {
-    display: none;
-  }
-  @media screen and (max-width: 720px) {
-    img {
-      max-width: 100%;
-      object-fit: contain;
-      height: 10em;
-    }
-    .card {
-      max-width: 10em;
-      margin-top: 1em;
-    }
-    #Books {
-      grid-template-columns: auto auto;
-      grid-column-gap: 1em;
-    }
-  }
-  /* #Books{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: flex-end;
-    border: 5px;
-  } */
-  
-* {
-	box-sizing: border-box;
 }
-body {
-	font-family: 'Montserrat', sans-serif;
-	line-height: 1.6;
-	margin: 0;
-	min-height: 100vh;
-}
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-
-h2,
-h3,
-a {
-	color: #34495e;
-}
-
-a {
-	text-decoration: none;
-}
-
-
-
-.logo {
-	margin: 0;
-	font-size: 1.45em;
-}
-
-.main-nav {
-	margin-top: 5px;
-
-}
-.logo a,
-.main-nav a {
-	padding: 10px 15px;
-	text-transform: uppercase;
-	text-align: center;
-	display: block;
-}
-
-.main-nav a {
-	color: #34495e;
-	font-size: .99em;
-}
-
-.main-nav a:hover {
-	color: #718daa;
-}
-
-
-
-.header {
-	padding-top: .5em;
-	padding-bottom: .5em;
-	border: 1px solid #a2a2a2;
-	background-color: #f4f4f4;
-	-webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-	-moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-	box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-}
-
-
-/* ================================= 
-  Media Queries
-==================================== */
-
-
-
-
-@media (min-width: 769px) {
-	.header,
-	.main-nav {
-		display: flex;
-	}
-	.header {
-		flex-direction: column;
-		align-items: center;
-    	.header{
-		width: 80%;
-		margin: 0 auto;
-		max-width: 1150px;
-	}
-	}
-
-}
-
-@media (min-width: 1025px) {
-	.header {
-		flex-direction: row;
-		justify-content: space-between;
-	}
-
-}
-/*ffooter*/
-.footer{
-  background:#000;
-  padding:30px 0px;
-  font-family: 'Play', sans-serif;
-  text-align:center;
-  }
-  
-  .footer .row{
-  width:100%;
-  margin:1% 0%;
-  padding:0.6% 0%;
-  color:gray;
-  font-size:0.8em;
-  }
-  
-  .footer .row a{
-  text-decoration:none;
-  color:gray;
-  transition:0.5s;
-  }
-  
-  .footer .row a:hover{
-  color:#fff;
-  }
-  
-  .footer .row ul{
-  width:100%;
-  }
-  
-  .footer .row ul li{
-  display:inline-block;
-  margin:0px 30px;
-  }
-  
-  .footer .row a i{
-  font-size:2em;
-  margin:0% 1%;
-  }
-  
-  @media (max-width:720px){
-  .footer{
-  text-align:left;
-  padding:5%;
-  }
-  .footer .row ul li{
-  display:block;
-  margin:10px 0px;
-  text-align:left;
-  }
-  .footer .row a i{
-  margin:0% 3%;
-  }
-  }
